Fix section alignment

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -209,6 +209,10 @@ body {
     text-align: center;
     padding: 10rem 0;
     height: 100vh;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    width: inherit;
 
     @media screen and (max-width: 1024px) {
         height: auto;
@@ -251,10 +255,6 @@ body {
     }
 }
 
-.section--height {
-    height: auto;
-}
-
 .grid {
     display: flex;
     flex-flow: row wrap;
@@ -289,8 +289,6 @@ body {
     overflow: hidden;
 
     .card__image {
-        padding: 0 0 60%;
-        position: relative;
         transition: transform .3s ease-in-out, opacity .3s;
     }
 
@@ -300,9 +298,6 @@ body {
     }
 
     img {
-        position: absolute;
-		top: 0;
-		left: 0; 
 		width: 100%; 
 		height: 100%; 
 		object-fit: cover;
